<resources>
    <string name="app_name">Carecomm</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="wifi_connect">Wi-Fi Connect</string>
    <string name="forget_password">Forget Password? | Find</string>
    <string name="forget_password_mobile">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="next">Next</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="enter_name">Enter your Name</string>
    <string name="full_name">Full Name</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat_mobile">ChatMobileActivity</string>
    <string name="action_settings">Settings</string>


</resources>
