<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity"
    android:orientation="vertical"
    android:background="@color/app_background_color"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <ImageView
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/cc_logo_lg"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal"
                >

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:fontFamily="@font/pt_sans_caption_regular"
                    android:background="@drawable/ractangle_edit_text"
                    android:drawablePadding="8dp"
                    android:paddingLeft="40dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:gravity="center_vertical"
                    android:maxLines="1">
                </EditText>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_margin="10dp"
                    android:src="@mipmap/user_icon" />

            </FrameLayout>
            <FrameLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal"
                >

                <EditText
                    android:id="@+id/usr_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/pt_sans_caption_regular"
                    android:background="@drawable/ractangle_edit_text"
                    android:drawablePadding="8dp"
                    android:paddingLeft="40dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:paddingRight="10dp"

                    android:gravity="center_vertical"
                    android:maxLines="1">
                </EditText>

                <ImageView

                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_margin="10dp"
                    android:src="@mipmap/pw_icon" />

                <ImageView
                    android:id="@+id/eye_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_margin="8dp"
                    android:src="@mipmap/pw_shown_icon" />
            </FrameLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:visibility="invisible"
                        android:layout_weight="0.5"
                        app:cardCornerRadius="5dp">

                        <LinearLayout
                            android:id="@+id/connect_wifi"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:orientation="horizontal"
                            android:padding="10dp"
                            android:background="@color/white">
                            <ImageView
                                android:layout_gravity="center_vertical"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_marginRight="5dp"
                                android:layout_marginBottom="5dp"
                                android:src="@mipmap/wifi_full_dark"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:text="@string/wifi_connect"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/black_dull"
                                android:gravity="center_vertical"
                                android:fontFamily="@font/pt_sans_caption_bold"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dull_red"
                        android:layout_weight="0.5"
                        android:layout_marginLeft="20dp"
                        app:cardCornerRadius="25dp">
                        <Button
                            android:id="@+id/btn_forget_password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:text="@string/forget_password_mobile"
                            android:textColor="@color/white"
                            android:background="@color/dull_red"
                            android:textAllCaps="false"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:fontFamily="@font/pt_sans_caption_bold"
                            />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <Button
                    android:layout_marginTop="20dp"
                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black_dull"
                    android:background="@drawable/ractangle_btn_tan"
                    android:textAllCaps="false"
                    android:fontFamily="@font/pt_sans_caption_bold"
                    />

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/very_light_pink"
                        android:layout_weight="0.2"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="OR"
                        android:gravity="center"
                        android:fontFamily="@font/pt_sans_caption_bold"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/black_dull"
                        android:layout_weight="0.3"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/very_light_pink"
                        android:layout_weight="0.2"/>
                </LinearLayout>

                <Button
                    android:layout_marginTop="20dp"
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/register"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/white"
                    android:background="@drawable/ractangle_btn_light_blue"
                    android:textAllCaps="false"
                    android:fontFamily="@font/pt_sans_caption_bold"
                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>